docs/v1.3.0/en/api/gui/UIContext.md
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `UIContext`
- [← Area / Back to gui](./)
- [↑ API Index](../)
- [🏠 Home v1.3.0](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# UIContext

**Namespace:** TaleWorlds.GauntletUI
**Module:** TaleWorlds.GauntletUI
**Type:** `public class UIContext`
**Base:** none
**File:** `TaleWorlds.GauntletUI/TaleWorlds/GauntletUI/UIContext.cs`

## Overview

`UIContext` lives in `TaleWorlds.GauntletUI` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.GauntletUI` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Properties

| Name | Signature |
|------|-----------|
| `ActiveCursorOfContext` | `public UIContext.MouseCursors ActiveCursorOfContext { get; set; }` |
| `IsDynamicScaleEnabled` | `public bool IsDynamicScaleEnabled { get; }` |
| `ScaleModifier` | `public float ScaleModifier { get; }` |
| `ContextAlpha` | `public float ContextAlpha { get; }` |
| `Scale` | `public float Scale { get; }` |
| `CustomScale` | `public float CustomScale { get; }` |
| `CustomInverseScale` | `public float CustomInverseScale { get; }` |
| `CurrentLanugageCode` | `public string CurrentLanugageCode { get; }` |
| `UIRandom` | `public Random UIRandom { get; }` |
| `InverseScale` | `public float InverseScale { get; }` |
| `EventManager` | `public EventManager EventManager { get; }` |
| `Root` | `public Widget Root { get; }` |
| `ResourceDepot` | `public ResourceDepot ResourceDepot { get; }` |
| `TwoDimensionContext` | `public TwoDimensionContext TwoDimensionContext { get; }` |
| `Brushes` | `public IEnumerable<Brush> Brushes { get; }` |
| `DefaultBrush` | `public Brush DefaultBrush { get; }` |
| `SpriteData` | `public SpriteData SpriteData { get; }` |
| `BrushFactory` | `public BrushFactory BrushFactory { get; }` |
| `FontFactory` | `public FontFactory FontFactory { get; }` |
| `InputContext` | `public IReadonlyInputContext InputContext { get; }` |
| `GamepadNavigation` | `public IGamepadNavigationContext GamepadNavigation { get; }` |
| `LocalFrameNumber` | `public ulong LocalFrameNumber { get; }` |

## Key Methods

### GetBrush
`public Brush GetBrush(string name)`

**Purpose:** Gets the current value of `brush`.

### RefreshResources
`public void RefreshResources(SpriteData spriteData, FontFactory fontFactory, BrushFactory brushFactory)`

**Purpose:** Refreshes the display or cache of `resources`.

### Initialize
`public void Initialize()`

**Purpose:** Initializes the state, resources, or bindings for `initialize`.

### InitializeGamepadNavigation
`public void InitializeGamepadNavigation(IGamepadNavigationContext context)`

**Purpose:** Initializes the state, resources, or bindings for `gamepad navigation`.

### OnFinalize
`public void OnFinalize()`

**Purpose:** Called when the `finalize` event is raised.

### Update
`public void Update(float dt)`

**Purpose:** Updates the state or data of `update`.

### LateUpdate
`public void LateUpdate(float dt)`

**Purpose:** Handles logic related to `late update`.

### RenderTick
`public void RenderTick(float dt)`

**Purpose:** Handles logic related to `render tick`.

### OnOnScreenkeyboardTextInputDone
`public void OnOnScreenkeyboardTextInputDone(string inputText)`

**Purpose:** Called when the `on screenkeyboard text input done` event is raised.

### OnOnScreenKeyboardCanceled
`public void OnOnScreenKeyboardCanceled()`

**Purpose:** Called when the `on screen keyboard canceled` event is raised.

### HitTest
`public bool HitTest(Widget root, Vector2 position)`

**Purpose:** Handles logic related to `hit test`.

### HitTest
`public bool HitTest(Widget root)`

**Purpose:** Handles logic related to `hit test`.

### FocusTest
`public bool FocusTest(Widget root)`

**Purpose:** Handles logic related to `focus test`.

### SetIsMouseEnabled
`public void SetIsMouseEnabled(bool isMouseEnabled)`

**Purpose:** Sets the value or state of `is mouse enabled`.

### UpdateInput
`public void UpdateInput(InputType handleInputs)`

**Purpose:** Updates the state or data of `input`.

### OnMovieLoaded
`public void OnMovieLoaded(string movieName)`

**Purpose:** Called when the `movie loaded` event is raised.

### OnMovieReleased
`public void OnMovieReleased(string movieName)`

**Purpose:** Called when the `movie released` event is raised.

### DrawWidgetDebugInfo
`public void DrawWidgetDebugInfo()`

**Purpose:** Handles logic related to `draw widget debug info`.

### DebugDraw
`public void DebugDraw()`

**Purpose:** Handles logic related to `debug draw`.

## Usage Example

```csharp
var value = new UIContext();
value.GetBrush("example");
```

## See Also

- [Complete Class Catalog](../catalog)